@@ -13,44 +13,41 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package de.kalpatec.pojosr.framework.revision;
+package io.mypojo.framework.revision;
 
+import java.io.File;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.util.Enumeration;
-import java.util.Properties;
 
-public class URLRevision implements Revision {
-    private final URL m_url;
-    private final long m_lastModified;
+public class DirRevision implements Revision {
+    private final File m_file;
 
-    public URLRevision(URL url, long lastModified) {
-        m_url = url;
-        if (lastModified > 0) {
-            m_lastModified = lastModified;
-        } else {
-            m_lastModified = System.currentTimeMillis();
-        }
+    public DirRevision(File file) {
+        m_file = file;
     }
 
     @Override
     public long getLastModified() {
-        return m_lastModified;
+        return m_file.lastModified();
     }
 
     public Enumeration getEntries() {
-        return new Properties().elements();
+        return new FileEntriesEnumeration(m_file);
     }
 
     @Override
     public URL getEntry(String entryName) {
-        // TODO Auto-generated method stub
         try {
-            return new URL(m_url, entryName);
+            if (entryName != null) {
+                File file = (new File(m_file, (entryName.startsWith("/")) ? entryName.substring(1) : entryName));
+                if (file.exists()) {
+                    return file.toURL();
+                }
+            }
         } catch (MalformedURLException e) {
-            // TODO Auto-generated catch block
             e.printStackTrace();
-            return null;
         }
+        return null;
     }
 }
